# modelo-predicao-ml

./: .gitignore  app.py  pyproject.toml  testes.ipynb
